--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,10 +4,16 @@
     "es2021": true,
     "node": true
   },
-  "extends": ["some-other-config-you-use", "prettier"],
+  "extends": ["plugin:react/recommended", "eslint:recommended", "prettier"],
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {}
+  "plugins": ["react"],
+  "rules": {
+    "no-console": "off"
+  }
 }
