--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
   "env": {
     "jest/globals": true
   },
-  "plugins": [
-    "jest"
-  ],
+
   "scripts": {
-    "test": "jest",
+   
     "lint": "eslint",
-    "test:watch": "jest --watchAll",
-    "test:cov": "jest --coverage"
+   
   },
   "author": "",
   "prettier": {
@@ -22,21 +19,16 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
+    
     "eslint": "^8.8.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "^26.0.0",
-    "jest": "^27.4.7"
-  },
-  "babel": {
-    "env": {
-      "test": {
-        "plugins": [
-          "@babel/plugin-transform-modules-commonjs"
-        ]
-      }
-    }
+   
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    
   }
 }
